# ompi

config/: ompi_check_ucc.m4  ompi_check_ucx.m4
ompi/mca/coll/hcoll/: coll_hcoll_module.c
ompi/mca/coll/ucc/: Makefile.am  coll_ucc.h  coll_ucc_component.c  coll_ucc_module.c  coll_ucc_op.c  configure.m4
ompi/mca/coll/ucx/: Makefile.am  coll_ucx.h  coll_ucx_component.c  coll_ucx_freelist.h  coll_ucx_module.c  coll_ucx_op.c  coll_ucx_request.c  coll_ucx_request.h  configure.m4
ompi/mca/common/ucx/: common_ucx.c  common_ucx_datatype.c  common_ucx_datatype.h
ompi/mca/pml/ucx/: pml_ucx.c
ompi/mpi/c/: Makefile.am  allreduce.c  bcast.c  gatherv.c  init.c  irecv.c  isend.c  mpi_api_pvars.c  mpi_api_pvars.h  recv.c  reduce.c  send.c
ompi/mpi/c/profile/: Makefile.am
ompi/runtime/: ompi_mpi_params.c
opal/mca/common/ucx/: common_ucx.c  common_ucx.h  common_ucx_wpool.c  common_ucx_wpool.h
oshmem/mca/atomic/ucx/: atomic_ucx_cswap.c  atomic_ucx_module.c
oshmem/mca/spml/ucx/: spml_ucx.c
